src/test/resources/typeSystemTestModels/invalid/classes/GenericClassNotSubClassOfThrowable.java
package typeSystemTestModels.invalid.classes;

import java.lang.Throwable;

public class GenericClassNotSubClassOfThrowable<T> extends Throwable {

}